# phylokit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
evaluation/: eval_balance.ipynb  eval_distance.ipynb
examples/: likelihood.ipynb  parsimony_score.ipynb  tree_vis.ipynb
phylokit/: __init__.py  balance.py  convert.py  core.py  dataset.py  distance.py  inference.py  jit.py  transform.py  traversal.py  util.py
phylokit/maximum_likelihood/: felsenstein.py
phylokit/parsimony/: hartigan.py
requirements/: CI.txt  development.txt
tests/: test_balance.py  test_convert.py  test_core.py  test_dataset.py  test_distance.py  test_felsenstein.py  test_inference.py  test_parsimony.py  test_transform.py  test_traversal.py  test_util.py
