[metadata]
name = phylokit
version = 0.0.1a1
author = Jerome Kelleher
author_email = jerome.kelleher@bdi.ox.ac.uk
description = "Experimental, do not use!"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeromekelleher/phylokit
project_urls =
    Bug Tracker = https://github.com/jeromekelleher/phylokit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = phylokit
python_requires = >=3.7
install_requires =
    tskit
    numba
